--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						    <img class="profilepic" src="img/profpic.jpg">
 							<br><img src="img/about.svg">
 							<p style="font-size:10px;">
-							about me goes here. about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.
+							My name is Christine- call me Christie if you want (in reality, I just couldn't get the christineliao domain...)- and I am a passionate designer interested in using design to improve the way we live. When I'm not designing, you can find me taking heavily-filtered photos of cityscapes, baking macarons, learning how to code something, or sneakily drawing people looking at their iPads at Starbucks. 
 							</p>
 							<br><br>
 						</div>
@@ -134,14 +134,15 @@
 		    			data-center="opacity: 1"
 		    			data-200-top="opacity: 0"
 		    			data-anchor-target="#slide-4 h2">
-				    		<h2><img src="img/illustration.svg"></h2>
+				    		<h2><img src="img/design.svg"></h2>
 			    		</div>
 			    	</div>
 			    	
 			    </div>
 			</section>
 
-			<section id="art" class="homeSlide">
+			
+				<section id="design" class="homeSlide">
 		    	<div class="bcg">
 			    	<div class="hsContainer">
 			    		<div class="hsContent">
@@ -155,17 +156,26 @@
 
 
 			<section id="slide-5" class="homeSlide">
-		    	<div class="bcg">
+		    	<div class="bcg"
+				data-center="background-position: 50% 0px;"
+				data-top-bottom="background-position: 50%  -100px;"
+				data-bottom-top="background-position: 50% 100px;"
+				data-anchor-target="#slide-5">
 			    	<div class="hsContainer">
-			    		<div class="hsContent">
-				<h2><img src="img/design.svg"></h2>
+		    			<div class="hsContent"
+		    			data--50-bottom="opacity: 0;"
+		    			data--200-bottom="opacity: 1;"
+		    			data-center="opacity: 1"
+		    			data-200-top="opacity: 0"
+		    			data-anchor-target="#slide-5 h2">
+				<h2><img src="img/illustration.svg"></h2>
 			</p>
 			    		</div>
 		        	</div>
 		    	</div>
 		    </section>
 		    
-			<section id="design" class="homeSlide">
+			<section id="art" class="homeSlide">
 		    	<div class="bcg">
 			    	<div class="hsContainer">
 			    		<div class="hsContent">
