fixed up some nomenclature
comments, some alignment, descriptions

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						    <img class="profilepic" src="img/profpic.jpg">
 							<br><img src="img/about.svg">
 							<p style="font-size:10px;">
-							My name is Christine- call me Christie if you want (in reality, I just couldn't get the christineliao domain...)- and I am a passionate designer interested in using design to improve the way we live. When I'm not designing, you can find me taking heavily-filtered photos of cityscapes, baking macarons, learning how to code something, or sneakily drawing people looking at their iPads at Starbucks. 
+							My name is Christine- call me Christie if you want (I just couldn't get the christineliao domain...) and I am a passionate designer interested in using design to improve the way we live. When I'm not designing, you can find me taking heavily-filtered photos of cityscapes, baking macarons, learning how to code something, or sneakily drawing people looking at their iPads at Starbucks. 
 							</p>
 							<br><br>
 						</div>
@@ -109,12 +109,12 @@
 			    </div>
 			</section>
 			
-			<section id="archcintent" class="homeSlide">
+			<section id="archcontent" class="homeSlide">
 		    	<div class="bcg">
 			    	<div class="hsContainer">
 			    		<div class="hsContent">
 				<p style="font-size:10px;">
-				about me goes here. about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.
+				I'm currently in the process of reformatting my portfolio into a web format, but please feel free to view my work samples on <font color="#666"><a href="http://issuu.com/christineliao/docs/selectedworks">issuu.</a></font> 
 			</p>
 			    		</div>
 		        	</div>
@@ -147,7 +147,7 @@
 			    	<div class="hsContainer">
 			    		<div class="hsContent">
 				<p style="font-size:10px;">
-				about me goes here. about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.
+				coming soon...
 			</p>
 			    		</div>
 		        	</div>
@@ -180,7 +180,7 @@
 			    	<div class="hsContainer">
 			    		<div class="hsContent">
 				<p style="font-size:10px;">
-				about me goes here. about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.about me goes here.
+				working on thumbs, i swear
 			</p>
 			    		</div>
 		        	</div>
